2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Install man page.
	
2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-02-13  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Raise ExtensionRunError exception instead of showing an error
	message when the repository creation fails, since the extension 
	can't continue without a repository object.
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* NEWS:

	Update for release 1.99.90 (2.0.0-beta1).
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* README:

	Updated
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* AUTHORS:
	* setup.py:
	* TODO:
	* MANIFEST.in:
	* pycvsanaly2/*:
	* db/*
	
	Merge cvsanaly2 branch.
	
2009-02-04  Carlos Garcia Campos  <carlosgc@gsyc.es>
	
	* setup.py:
	* NEWS:

	Update for release 1.1.0
	
2007-11-24  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:

	When checking the format of a logfile (CVS or SVN), CVS was
	checked first. In some cases (when a SVN was imported from a CVS
	repository), a SVN log file may contain CVS-like strings, being
	identified then as it would be CVS.

	This happens for instance with the logfile obtained from the SVN
	repository of Evolution, that was imported from a CVS repository.

	So now the SVN log file format is checked before the CVS, because
	it is unlikely that a CVS log file may contain SVN-like strings.

2007-09-07  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:

	The repopath value in the files and log tables is now correctly
	filled for SVN repositories.
	
2007-08-29  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* README:

	Wrong email address
		
2007-06-29  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/main.py:

	Add missing ,
	
2007-06-05  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:
